# Heaviside

./: .gitignore  .gitmodules  AGENTS.md  HANDOFF.md  LICENSE  Makefile  README.md  pyproject.toml
.github/workflows/: ci.yml
COAS/schemas/: COAS.json  converter.json  inputs.json  outputs.json  utils.json
docs/: BACKLOG.md  COAS-proposal.md  MKF-HANDOFF.md  ROADMAP.md  acf-efficiency-pending.md  cas-issue-tinivella-draft.md  converter_designer_master_plan.md  converter_pipeline_gap_analysis.md  corpus-report.md  cross-reference.md  crossref_v2_proposal.md  extras-probe-report.md  extras-probe.json  kirchhoff_migration_analysis.md  mkf-handoff.md  probe-report.md  pymkf-spiceconfig-binding-request.md  stages_refactor_roadmap.md  web-interface-exploration.md
docs/archive/: HANDOFF-2026-05-26.md
heaviside/: __init__.py  _pyom_cache.py  bridge.py  cli.py  mcp_server.py  provenance.py  validate.py
heaviside/agents/: __init__.py  factory.py  llm_call.py  magnetic_picker.py  tools.py  topology_selector_llm.py
heaviside/api/: __init__.py  jobs.py  server.py  telemetry.py
heaviside/catalogue/: __init__.py  _reader.py  assemble.py  kelvin_adapter.py  kirchhoff_fill.py  selector.py
heaviside/components/: __init__.py
heaviside/decomposer/: __init__.py  api.py  inputs_mapper.py  kirchhoff_adapter.py  spice_parser.py  stencils.py
heaviside/knowledge/: __init__.py
heaviside/librarian/: __init__.py  auditor.py  delta.py  guards.py  physics_validator.py  repair.py  safe_access.py  tas.py
heaviside/llm/: __init__.py  kimi.py  model_tiers.json  model_tiers.py
heaviside/pipeline/: __init__.py  _kelvin_primitives.py  analyst.py  bom_import.py  case_dimensions.py  converter_designer.py  cre.py  cre_pipeline.py  cre_testbench.py  crossref.py  crossref_invariants.py  crossref_pipeline.py  extract.py  fae_memory.py  full_design.py  guardrails.py  index_budget.py  isat_normalize.py  match_score.py  param_check.py  pdf_extract.py  re_pipeline.py  re_state.py  re_testbench.py  realism.py  scoring.py  sourcing.py  stress.py  teacher.py  topology_screen.py  url_fetch.py  value_parse.py  verdict.py
heaviside/report/: __init__.py  crossref_html.py  html.py  latex.py  model.py
heaviside/sim/: __init__.py  parasitics.py  runner.py
heaviside/spec/: __init__.py  design_spec.py  validate_topology.py
heaviside/stages/: __init__.py  bom_extract.py  bom_table.py  component_match.py  converter_spec_build.py  cross_check.py  design_artifact.py  frequency_sweep.py  mpn_verify.py  op_reconcile.py  realism_gate.py  refinement.py  reporter.py  resonant_freq.py  reviewed_stage.py  reviewer_panel.py  spice_sim.py  stress_extract.py  topology_constraints.py  topology_id.py
heaviside/tools/: diff_kelvin.py  gen_kelvin_golden.py
heaviside/topologies/: __init__.py  active_clamp_forward.py  asymmetric_half_bridge.py  boost.py  buck.py  cllc.py  clllc.py  common_mode_choke.py  cuk.py  current_transformer.py  differential_mode_choke.py  dispatch.py  dual_active_bridge.py  flyback.py  four_switch_buck_boost.py  isolated_buck.py  isolated_buck_boost.py  llc.py  phase_shifted_full_bridge.py  phase_shifted_half_bridge.py  power_factor_correction.py  push_pull.py  registry.py  sepic.py  series_resonant.py  single_switch_forward.py  two_switch_forward.py  vienna.py  weinberg.py  zeta.py
heaviside/types/: __init__.py
heaviside/webui/: index.html  package-lock.json  package.json  vite.config.js
knowledge/: README.md
knowledge/components/: gan-design-guide.md  how2power-best-articles.md  power-supply-fundamentals.md  selection-guide.md  switching-loss-models.md
knowledge/control/: digital-control.md  feedback-loop-design.md  ridley-resources.md
knowledge/emc/: emi-design-guide.md  input-filter-design.md
knowledge/gate-drive/: gan-gate-drive.md
knowledge/magnetics/: design-guide.md  kolar-2017-performance-limits.md  openmagnetics-models.md  psma-complete-index.md  psma-magnetics-checklist.md  psma-resources.md  pyopenmagnetics-api.md
knowledge/pcb-layout/: layout-guide.md
knowledge/protection/: protection-circuits.md
knowledge/reliability/: reliability-guide.md
knowledge/simulation/: averaged-pwm-models.md  dab.md  llc.md  ngspice-flyback-lessons.md  ngspice-guide.md  rms-waveforms-reference.md
knowledge/thermal/: thermal-guide.md
knowledge/topologies/: ac-dc-design-guide.md  active-clamp-flyback.md  active-clamp-forward.md  boost.md  buck-boost.md  buck.md  cllc.md  cuk.md  dab.md  flyback.md  full-bridge.md  half-bridge.md  isolated-dcdc-practical-guide.md  llc.md  pfc.md  phase-shifted-full-bridge.md  push-pull.md  resonant-theory.md  sepic.md  single-switch-forward.md  topology-selection-guide.md  two-switch-flyback.md  two-switch-forward.md  weinberg.md  zeta.md
scripts/: backfill_dielectric_code.py  backfill_diode_forward_voltage.py  backfill_infineon_producttable.py  backfill_lps5030_dimensions.py  backfill_semiconductor_electrical.py  backfill_wurth_cap_status.py  check_all_verdicts.py  check_pydantic_cap.py  check_pyom_gateway.py  check_verdicts.py  convert_all_vishay.py  convert_murata.py  convert_vishay.py  convert_vishay_remaining.py  convert_vishay_resistors.py  convert_vishay_resistors_json.py  corpus_run.py  debug_isat_margin.py  deploy_tas_data.sh  diag_highpower.py  dump_all_decks.py  e2e_closed_loop.py  e2e_design_converter_check.py  e2e_design_cost.py  e2e_new_designer.py  fetch_redexpert_varistors.py  fetch_redexpert_wurth.py  fetch_timebases.py  fetch_we_connectors.py  fix_vishay_igbt_modules.py  fix_wurth_mapi_74438356015.py  gen_topology_modules.py  gen_types.py  import_chip_beads.py  inspect_designer_bom.py  inspect_isat.py  librarian_auth.py  librarian_run.py  merge_tas_delta.py  migrate_cap_field_drift.py  (+38 more)
scripts/cap_tech_rules/: ceramic_codes.json  draloric_rf_ceramic.json  film.json  misc_buckets.json  tail.json  tantalum.json
scripts/enrichment/: apply_controller_enrichment.py  apply_patches.py  apply_url_repair.py  build_diodes_from_datasheets.py  capacitors_report.md  datasheet_url_report.md  diodes_report.md  (+8 more)
tests/: conftest.py
(+342 files in other folders)
