[build-system]
requires = ["hatchling>=1.25"]
build-backend = "hatchling.build"

[project]
name = "heaviside"
version = "0.1.0.dev0"
description = "PyOpenMagnetics-first, agent-driven power electronics design system"
readme = "README.md"
requires-python = "==3.12.*"
license = { text = "MIT" }
authors = [{ name = "OpenConverters" }]
classifiers = [
  "Development Status :: 2 - Pre-Alpha",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3.12",
  "Topic :: Scientific/Engineering",
]
dependencies = [
  # Engine (built from vendor/PyOpenMagnetics submodule in CI; PyPI fallback for dev).
  # Capped <1.3.12 until decomposer is ported: 1.3.12 removed the trailing bridgeMode
  # arg from generate_ngspice_circuit, which would break heaviside/decomposer/api.py.
  "PyOpenMagnetics>=1.3.10,<1.3.12",
  # Numerics
  "numpy>=2.0",
  "scipy>=1.13",
  # Agent runtime (model-agnostic)
  "strands-agents>=1.34",
  # OpenAI-compatible client Strands uses to build the Kimi-backed model
  # (Otto / Ray / Nicola). Without it those agents raise at construction.
  "openai>=1.40",
  # Schema-derived TypedDicts only; one BaseModel for the user DesignSpec
  "pydantic>=2.8",
  # TAS-conformance gate (Phase B): JSON Schema validation against TAS+PEAS+MAS
  "jsonschema>=4.18",
  # CLI + API
  "typer>=0.12",
  "fastapi>=0.115",
  "uvicorn[standard]>=0.30",
  # MCP server
  "mcp>=1.0",
  # Datasheets / PDF
  "pdfplumber>=0.11",
  "pymupdf>=1.24",
  # BOM ingest (.xlsx upload path in pipeline/bom_import.py)
  "openpyxl>=3.1",
  # Component scraping (ported from Proteus)
  "patchright>=1.46",
  "beautifulsoup4>=4.12",
  # Misc
  "httpx>=0.27",
  "weasyprint>=60",  # HTML report -> deliverable PDF (reporter stage)
  "tenacity>=9.0",
  "orjson>=3.10",
  "structlog>=24.4",
  # Telemetry DB
  "sqlalchemy>=2.0",
  "psycopg2-binary>=2.9",
]

[project.optional-dependencies]
dev = [
  "ruff==0.15.15",  # pinned: ruff format output + lint rules are version-sensitive
  "mypy>=1.13",
  "pytest>=8.3",
  "pytest-xdist>=3.6",
  "pytest-cov>=5.0",
  "hypothesis>=6.115",
  "types-requests",
]
types = [
  # quicktype-driven TypedDict generation lives in scripts/gen_types.py;
  # quicktype itself is a Node tool, installed via `npx` in `make types`.
]

[project.scripts]
heaviside = "heaviside.cli:app"

[tool.hatch.build.targets.wheel]
packages = ["heaviside"]

# ---------------------------------------------------------------------------
# Ruff
# ---------------------------------------------------------------------------
[tool.ruff]
target-version = "py312"
line-length = 100
# Submodules are foreign code — never lint, never format.
extend-exclude = [
  "heaviside/types/_generated",
  "vendor",
  "MAS", "PEAS", "SAS", "CAS", "RAS", "TAS",
  "CIAS", "CONAS", "CTAS", "AAS", "COAS",
  ".venv",
]

[tool.ruff.lint]
select = [
  "E", "F", "W",      # pycodestyle / pyflakes
  "I",                # isort
  "B",                # bugbear
  "UP",               # pyupgrade
  "RUF",              # ruff-specific
  "SIM",              # simplify
  "TID",              # tidy-imports
]
ignore = [
  "E501",  # line length handled by formatter
  # Intentional physics notation: this is a power-electronics codebase that
  # deliberately uses Unicode math symbols (µH, ·, °C, ≤, ², ×, ⇒, √, ½) in
  # docstrings/comments/strings. The ambiguous-unicode rules exist to catch
  # homoglyph typos, not to ban deliberate scientific notation.
  "RUF001",  # ambiguous-unicode-character-string
  "RUF002",  # ambiguous-unicode-character-docstring
  "RUF003",  # ambiguous-unicode-character-comment
  # Single-letter `l` is the established terse local for the harvested
  # component/inductor dict throughout the extractor + realism math.
  "E741",  # ambiguous-variable-name
]

[tool.ruff.lint.per-file-ignores]
# FastAPI declares request params via call-defaults (Depends/Query/File/
# Form/Body) — B008 is a false positive for that idiom. RUF013 likewise
# flags FastAPI's implicit-Optional defaults.
"heaviside/api/*" = ["B008", "RUF013"]
# Typer declares CLI params the same way (typer.Option/typer.Argument as
# the parameter default) — B008 is a false positive for the Typer idiom too.
"heaviside/cli.py" = ["B008"]
# Standalone scripts set up sys.path / env before importing project modules,
# so imports legitimately follow statements (E402).
"scripts/*" = ["E402"]
# `with pytest.raises(Err): with resource():` is a standard, readable pytest
# idiom (the raises wraps a context manager whose __enter__ is what should
# raise); collapsing it into one `with` line is often less clear, so don't
# force SIM117 in tests.
"tests/*" = ["SIM117"]

# ---------------------------------------------------------------------------
# Mypy (strict)
# ---------------------------------------------------------------------------
[tool.mypy]
python_version = "3.12"
strict = true
warn_unused_configs = true
warn_return_any = true
disallow_untyped_defs = true
disallow_any_generics = true
no_implicit_reexport = true
show_error_codes = true
exclude = [
  "vendor/",
  "MAS/", "PEAS/", "SAS/", "CAS/", "RAS/", "TAS/",
  ".venv/",
]

[[tool.mypy.overrides]]
module = ["PyOpenMagnetics", "PyOpenMagnetics.*"]
ignore_missing_imports = true

# quicktype-generated schema classes: analysed (so imports into them
# resolve with real types) but never held to strict-mode standards.
[[tool.mypy.overrides]]
module = ["heaviside.types._generated.*"]
ignore_errors = true
disallow_untyped_defs = false

# ---------------------------------------------------------------------------
# Pytest
# ---------------------------------------------------------------------------
[tool.pytest.ini_options]
minversion = "8.0"
testpaths = ["tests"]
addopts = "-ra --strict-markers --strict-config"
markers = [
  "unit: fast, no external deps",
  "property: hypothesis property tests",
  "realism: realism-gate (physics-bound) tests",
  "regression: golden regression against TAS converters.ndjson",
  "integration: requires PyOpenMagnetics + ngspice",
  "evals: agent eval suite (LLM required)",
]

# ---------------------------------------------------------------------------
# Coverage
# ---------------------------------------------------------------------------
[tool.coverage.run]
source = ["heaviside"]
omit = ["heaviside/types/_generated/*"]

[tool.coverage.report]
exclude_lines = ["pragma: no cover", "if TYPE_CHECKING:", "raise NotImplementedError"]
